typo - missing 'l' in collaboration

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
    <p>Professionally, I am a web developer - I play with SCSS, HTML, JS, Node, PHP, and Wordpress. Outside of work, I enjoy spending time outside - hiking, fishing, target shooting, riding my motorcycle, or kayaking. I have an extreme love for dogs.</p>
 
-   <p>I'm a pretty mellow dude and open to colaboration on new and fun projects. The best way to get to know me is to <a href="/resume/">check out my resume</a> and <a href="mailto:kyle@kyleouellette.com">shoot me a message</a>.</p>
+   <p>I'm a pretty mellow dude and open to collaboration on new and fun projects. The best way to get to know me is to <a href="/resume/">check out my resume</a> and <a href="mailto:kyle@kyleouellette.com">shoot me a message</a>.</p>
 </div>
 
 <script type="text/javascript" src="_js/main.js"></script>
