added css reset, css styles to comp

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <title>Kyle Ouellette // Web Developer</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,300' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" type="text/css" href="_css/reset.css">
    <link rel="stylesheet" type="text/css" href="_css/main.css">
    <script type="text/javascript" src="//code.jquery.com/jquery.min.js"></script>
 </head>
