--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>Outdoorsman</li>
    </ul>
 
-   <p>Professionally I’m a web developer who works with SCSS, HTML, NODE, PHP, and Wordpress. When not behind my computer building apps or sites, you’ll find me outside in a kayak, riding my motorcycle, fishing or hiking with my pup Angus. Anything having to do with dogs or nature and I’m in. Always eager to collaborate on new projects that are fun and exciting. If you’re interested in learning more, <a href="http://kyleouellette.com/resume">check out my CV</a> and <a href="mailto:kyle@kyleouellette.com">send me a message</a>, would love to hear from you! </p>
+   <p>Professionally I'm a web developer who works with SCSS, HTML, NODE, PHP, and Wordpress. When not behind my computer building apps or sites, you'll find me outside in a kayak, riding my motorcycle, fishing or hiking with my pup Angus. Anything having to do with dogs or nature and I'm in. Always eager to collaborate on new projects that are fun and exciting. If you're interested in learning more, <a href="http://kyleouellette.com/resume">check out my CV</a> and <a href="mailto:kyle@kyleouellette.com">send me a message</a>, would love to hear from you! </p>
 </div>
 
 <script type="text/javascript" src="_js/main.js"></script>
